2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_FUNC_STPNCPY.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_ERROR instead of gt_FUNC_ERROR_AT_LINE.
	* Makefile.am (config.h_vms, config.h.msvc): Remove setting of
	HAVE_DECL_STRERROR.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_QUOTE.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_EXITFAIL.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_GETOPT.
	* Makefile.am (config.h_vms, config.h.msvc): Define __GETOPT_PREFIX
	to empty.
	* Makefile.msvc: Update.
	* Makefile.vms: Update.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Define HAVE_WMEMCHR and
	HAVE_WMEMCPY to 1.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Define USE_UNLOCKED_IO
	to 1.

2005-01-05  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.rc: Update copyright year.
	* windows/gettextsrc.rc: Likewise.
	* windows/gettextpo.rc: Likewise.

2004-12-10  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.def: Export obstack_free, not _obstack_free.

2004-09-06  Bruno Haible  <bruno@clisp.org>

	* windows/gettextpo.def: Add po_message_check_format.

2004-09-05  Bruno Haible  <bruno@clisp.org>

	* windows/gettextsrc.def: Add the variables names from po-error.h.
	* windows/gettextpo.def: Add many new function names.

2004-04-19  Bruno Haible  <bruno@clisp.org>

	* gettext.m4: Change jm_ to gl_ in all uses of AC_DEFINE'd names.

2004-03-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Fix the value of SIZE_MAX.

2004-02-07  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_QUOTEARG.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-24  Bruno Haible  <bruno@clisp.org>
