@@ -84,6 +84,7 @@ signalblocking.m4 \
 ssize_t.m4 \
 stdbool.m4 \
 stpncpy.m4 \
+strcase.m4 \
 strerror.m4 \
 strerror_r.m4 \
 tmpdir.m4 \
