@@ -1,5 +1,10 @@
 2005-01-06  Bruno Haible  <bruno@clisp.org>
 
+	* strcasecmp.c: Update from gnulib.
+	* strncasecmp.c: Update from gnulib.
+
+2005-01-06  Bruno Haible  <bruno@clisp.org>
+
 	* stpncpy.h: Update from gnulib.
 	* stpncpy.c: Update from gnulib with simplifications.
 	* Makefile.am (libgettextlib_la_SOURCES): Remove stpncpy.h, stpncpy.c.
