@@ -1,5 +1,10 @@
 2005-01-06  Bruno Haible  <bruno@clisp.org>
 
+	* strcase.m4: New file, from gnulib.
+	* Makefile.am (EXTRA_DIST): Add it.
+
+2005-01-06  Bruno Haible  <bruno@clisp.org>
+
 	* stpncpy.m4: New file, from gnulib.
 	* Makefile.am (EXTRA_DIST): Add it.
 
