@@ -1,5 +1,10 @@
 2005-01-06  Bruno Haible  <bruno@clisp.org>
 
+	* configure.ac: Invoke gl_STRCASE. Don't test for strcasecmp and
+	strncasecmp here.
+
+2005-01-06  Bruno Haible  <bruno@clisp.org>
+
 	* configure.ac: Invoke gl_FUNC_STPNCPY.
 
 2005-01-06  Bruno Haible  <bruno@clisp.org>
